--- a/Pemetaan.html
+++ b/Pemetaan.html
@@ -224,7 +224,11 @@
 </head>
 <body>
     <div class="header">
-        <h1>🌍 Peta Bidang Tanah Desa Canden, Kecamatan Sambi</h1>
+            <a href="#home" class="logo">
+                <img src="img/Logo.png" alt="EarthLand Logo" style="width: 80px; height: auto;">
+                <span class="logo-text">EarthLand</span>
+            </a>
+        <h1>Peta Bidang Tanah Desa Canden, Kecamatan Sambi</h1>
         <div class="header-search-wrapper">
             <div class="search-container">
                 <div class="search-title">🔍 Pencarian Bidang Tanah</div>
