--- a/Home.html
+++ b/Home.html
@@ -748,8 +748,8 @@
     <main>
         <section id="home" class="hero">
             <video class="hero-video" autoplay muted loop>
-                <source src="video/Home.mp4" type="video/mp4">
-                <source src="video/Home.webm" type="video/webm">
+                <source src="Video/Home.mp4" type="Video/mp4">
+                <source src="Video/Home.webm" type="Video/webm">
                 <!-- Fallback untuk browser yang tidak mendukung video -->
                 Your browser does not support the video tag.
             </video>
