--- a/Daftar.html
+++ b/Daftar.html
@@ -415,7 +415,7 @@
             </div>
 
             <div class="login-link">
-                <p>Sudah punya akun? <a href="Log-in.html" onclick="showLogin()">Masuk di sini</a></p>
+                <p>Sudah punya akun? <a href="login.html" onclick="showLogin()">Masuk di sini</a></p>
             </div>
         </div>
     </div>
