--- a/Home.html
+++ b/Home.html
@@ -773,7 +773,7 @@
                         <h3>Peraturan</h3>
                         <p>Akses lengkap ke peraturan dan kebijakan terkait kepemilikan tanah serta hak dan kewajiban pemilik tanah.</p>
                     </a>
-                    <a href="https://ikhsanandaacetta.github.io/Earrthland/Pemetaan.html" class="feature-card">
+                    <a href="Pemetaan.html" class="feature-card">
                         <span class="feature-icon">🗺</span>
                         <h3>Pemetaan & Survey</h3>
                         <p>Pemetaan status dan detail bidang tanah yang telah terdaftar secara resmi.</p>
